--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    @font-face {
+        font-family: 'Levi-Windows';
+        src: url('./assets/fonts/Levi-Windows.ttf') format("truetype");
+    }
+}
